--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha __tests__",
     "bench": "node bench.mjs"
   },
   "repository": {
@@ -28,6 +28,8 @@
     "fast-querystring": "^1.1.2"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "qs": "^6.11.2",
     "tinybench": "^2.5.0"
   }
